Overflow wasn't properly handled on the x-axis fixed

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -269,7 +269,7 @@
 
     .heading-container {
         margin-top: 8rem;
-        margin-bottom: 2rem;
+        margin-bottom: 10rem;
     }
 
     .project-container {
